# ceia-nlp-II-tp-3

./: Makefile  README.md  load.py  main.py  plot.py  pyproject.toml  run.py  run_agent.py  ui.py
data/: cv1.txt  cv2.txt  cv3.txt  cv4.txt  cv5.txt  cv6.txt  cv7.txt  cv8.txt  cv9.txt
doc/: diagrams.excalidraw  distinta_persona.mmd  grafo.mmd  misma_persona.mmd  sequence.mmd
src/: agent.py  chatService.py  groqService.py  vectorService.py
src/config/: settings.py
